--- a/LibOrbisPkg.Core/LibOrbisPkg.Core.csproj
+++ b/LibOrbisPkg.Core/LibOrbisPkg.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>LibOrbisPkg</RootNamespace>
     <LangVersion>7.3</LangVersion>
     <Platforms>AnyCPU</Platforms>
