--- a/LibOrbisPkg.Core/LibOrbisPkg.Core.csproj
+++ b/LibOrbisPkg.Core/LibOrbisPkg.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>LibOrbisPkg</RootNamespace>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
     <Platforms>AnyCPU</Platforms>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>CORE</DefineConstants>
